hopefully fixed mobile bckground image shift on scroll

--- a/src/styles/home.less
+++ b/src/styles/home.less
@@ -9,6 +9,8 @@
     background-color: #30d5c8;
     background-position: center;
     background-repeat: no-repeat;
+    height: auto;
+    width: auto;
     @media screen and (min-width:960px){
     }
     .hero {
